RESOLVED FIXED125759
[GTK] can't build from trunk: WebKitCookieManager: 'WebString' was not declared in this scope
https://bugs.webkit.org/show_bug.cgi?id=125759
Summary [GTK] can't build from trunk: WebKitCookieManager: 'WebString' was not declar...
Adam Dingle
Reported 2013-12-15 18:16:41 PST
I'm attempting to build WebKit from svn trunk on Ubuntu 14.04. I configured with $ ./configure --enable-introspection --enable-debug The build fails with this: CXX Source/WebKit2/UIProcess/API/gtk/libwebkit2gtk_3_0_la-WebKitCookieManager.lo Source/WebKit2/UIProcess/API/gtk/WebKitCookieManager.cpp: In function 'void webkitCookieManagerGetDomainsWithCookiesCallback(WKArrayRef, WKErrorRef, void*)': Source/WebKit2/UIProcess/API/gtk/WebKitCookieManager.cpp:208:9: error: 'WebString' was not declared in this scope WebString* domainString = static_cast<WebString*>(domains->at(i)); ^ Source/WebKit2/UIProcess/API/gtk/WebKitCookieManager.cpp:208:20: error: 'domainString' was not declared in this scope WebString* domainString = static_cast<WebString*>(domains->at(i)); ^ Source/WebKit2/UIProcess/API/gtk/WebKitCookieManager.cpp:208:47: error: expected type-specifier before 'WebString' WebString* domainString = static_cast<WebString*>(domains->at(i)); ^ Source/WebKit2/UIProcess/API/gtk/WebKitCookieManager.cpp:208:47: error: expected '>' before 'WebString' Source/WebKit2/UIProcess/API/gtk/WebKitCookieManager.cpp:208:47: error: expected '(' before 'WebString' Source/WebKit2/UIProcess/API/gtk/WebKitCookieManager.cpp:208:57: error: expected primary-expression before '>' token WebString* domainString = static_cast<WebString*>(domains->at(i)); ^ Source/WebKit2/UIProcess/API/gtk/WebKitCookieManager.cpp:208:74: error: expected ')' before ';' token WebString* domainString = static_cast<WebString*>(domains->at(i)); ^ make[1]: *** [Source/WebKit2/UIProcess/API/gtk/libwebkit2gtk_3_0_la-WebKitCookieManager.lo] Error 1 make[1]: Leaving directory `/home/adam/src/WebKit' make: *** [all] Error 2
Attachments
Patch (9.54 KB, patch)
2013-12-16 03:08 PST, Sergio Villar Senin
cgarcia: review+
Sergio Villar Senin
Comment 1 2013-12-16 02:51:20 PST
WebString was renamed to API::String. Uploading a fix soon...
Sergio Villar Senin
Comment 2 2013-12-16 03:08:25 PST
WebKit Commit Bot
Comment 3 2013-12-16 03:10:35 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Sergio Villar Senin
Comment 4 2013-12-16 03:12:50 PST
Note You need to log in before you can comment on or make changes to this bug.