[GTK] can't build from trunk: WebKitCookieManager: 'WebString' was not declared in this scope https://bugs.webkit.org/show_bug.cgi?id=125759

Reviewed by Carlos Garcia Campos.

Renamed WebString to API::String after r160608.

* UIProcess/API/gtk/WebKitCookieManager.cpp:
(webkitCookieManagerGetDomainsWithCookiesCallback):
* UIProcess/API/gtk/WebKitFileChooserRequest.cpp:
(webkit_file_chooser_request_get_mime_types):
(webkit_file_chooser_request_get_mime_types_filter):
(webkit_file_chooser_request_get_selected_files):
* UIProcess/API/gtk/WebKitFormSubmissionRequest.cpp:
(webkit_form_submission_request_get_text_fields):
* UIProcess/API/gtk/WebKitWebContext.cpp:
(webkit_web_context_set_web_extensions_directory):
(webkit_web_context_prefetch_dns):
* UIProcess/API/gtk/WebKitWebViewGroup.cpp:
(toAPIArray):
* WebProcess/InjectedBundle/API/gtk/WebKitWebExtension.cpp:
(webkitWebExtensionDidReceiveMessage):

Canonical link: https://commits.webkit.org/143794@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160632 268f45cc-cd09-0410-ab3c-d52691b4dbfc