Source/WebKit2/UIProcess/API/gtk/WebKitWebContext.cpp
@@ -20,6 +20,7 @@
 #include "config.h"
 #include "WebKitWebContext.h"
 
+#include "APIString.h"
 #include "WebBatteryManagerProxy.h"
 #include "WebCertificateInfo.h"
 #include "WebCookieManagerProxy.h"
@@ -782,7 +783,7 @@ void webkit_web_context_set_web_extensions_directory(WebKitWebContext* context, 
     g_return_if_fail(directory);
 
     // We pass the additional web extensions directory to the injected bundle as initialization user data.
-    context->priv->context->setInjectedBundleInitializationUserData(WebString::create(WebCore::filenameToString(directory)));
+    context->priv->context->setInjectedBundleInitializationUserData(API::String::create(WebCore::filenameToString(directory)));
 }
 
 /**
@@ -816,7 +817,7 @@ void webkit_web_context_prefetch_dns(WebKitWebContext* context, const char* host
     g_return_if_fail(hostname);
 
     ImmutableDictionary::MapType message;
-    message.set(String::fromUTF8("Hostname"), WebString::create(String::fromUTF8(hostname)));
+    message.set(String::fromUTF8("Hostname"), API::String::create(String::fromUTF8(hostname)));
     context->priv->context->postMessageToInjectedBundle(String::fromUTF8("PrefetchDNS"), ImmutableDictionary::create(std::move(message)).get());
 }
 
