Source/WebKit2/WebProcess/InjectedBundle/API/gtk/WebKitWebExtension.cpp
@@ -20,6 +20,7 @@
 #include "config.h"
 #include "WebKitWebExtension.h"
 
+#include "APIString.h"
 #include "ImmutableDictionary.h"
 #include "WKBundleAPICast.h"
 #include "WKBundlePage.h"
@@ -83,7 +84,7 @@ static void webkitWebExtensionPageDestroy(WebKitWebExtension* extension, WebPage
 static void webkitWebExtensionDidReceiveMessage(WebKitWebExtension* extension, const String& messageName, ImmutableDictionary& message)
 {
     if (messageName == String::fromUTF8("PrefetchDNS")) {
-        WebString* hostname = static_cast<WebString*>(message.get(String::fromUTF8("Hostname")));
+        API::String* hostname = static_cast<API::String*>(message.get(String::fromUTF8("Hostname")));
         WebCore::prefetchDNS(hostname->string());
     } else
         ASSERT_NOT_REACHED();
